--- a/index.html
+++ b/index.html
@@ -1,31 +1,14 @@
 <!DOCTYPE html>
-<!-- saved from url=(0038)http://gabrielecirulli.github.io/2048/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <title>Pipes</title>
 
   <link href="./includes/style.css" rel="stylesheet" type="text/css">
-  <link rel="shortcut icon" href="http://gabrielecirulli.github.io/2048/favicon.ico">
-  <link rel="apple-touch-icon" href="http://gabrielecirulli.github.io/2048/meta/apple-touch-icon.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-
-  <meta name="HandheldFriendly" content="True">
-  <meta name="MobileOptimized" content="320">
-  <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
-
-  <meta property="og:title" content="2048 game">
-  <meta property="og:site_name" content="2048 game">
-  <meta property="og:description" content="Join the numbers and get to the 2048 tile! Careful: this game is extremely addictive!">
-  <meta property="og:image" content="http://gabrielecirulli.github.io/2048/meta/og_image.png">
-<style type="text/css"></style></head>
-<body data-twttr-rendered="true">
+</head>
+<body>
   <div class="container">
     <div class="heading">
       <h1 class="title">Pipes</h1>
-      <div class="scores-container">
-        <div class="score-container">0</div>
-        <div class="best-container">36216</div>
-      </div>
     </div>
     <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
 
@@ -81,27 +64,9 @@
       <div class="tile-container"><div class="tile tile-2 tile-position-3-2 tile-new"><div class="tile-inner">2</div></div><div class="tile tile-2 tile-position-4-4 tile-new"><div class="tile-inner">2</div></div></div>
     </div>
 
-    <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. Connect the start to the finish!
-    </p>
-    <hr>
-    <p>
-    <strong class="important">Note:</strong> This site is the official version of 2048. You can play it on your phone via <a href="http://git.io/2048">http://git.io/2048.</a> All other apps or sites are derivatives or fakes, and should be used with caution.
-    </p>
     <hr>
     <p>
     Created by <a href="http://thomassteinke.net/" target="_blank">Thomas Steinke.</a> Inspired by <a href="gabrielecirulli.github.io/2048/" target="_blank">2048 by Gabriele Cirulli</a>.
     </p>
   </div>
-
-  <script src="./pipes/animframe_polyfill.js"></script>
-  <script src="./pipes/keyboard_input_manager.js"></script>
-  <script src="./pipes/html_actuator.js"></script>
-  <script src="./pipes/grid.js"></script>
-  <script src="./pipes/tile.js"></script>
-  <script src="./pipes/local_score_manager.js"></script>
-  <script src="./pipes/game_manager.js"></script>
-  <script src="./pipes/application.js"></script>
-
-
 </body></html>
