Words words words

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <p class="game-intro">Mess around with Conway's <strong>Game of Life!</strong></p>
 
-    <a class="go-button">Go</a>
+    <a class="go-button">Take a step (or press/hold space)</a>
 
     <div class="game-container">
       <div class="grid-container">
