--- a/index.html
+++ b/index.html
@@ -17,6 +17,43 @@
     <div class="game-container">
       <div class="grid-container">
       </div>
+      <div class="program-drawer">
+        <ul>
+          <li class="program">
+            A
+          </li>
+          <li class="program">
+            B
+          </li>
+          <li class="program">
+            C
+          </li>
+          <li class="program">
+            D
+          </li>
+          <li class="program">
+            E
+          </li>
+          <li class="program">
+            F
+          </li>
+          <li class="program">
+            G
+          </li>
+          <li class="program">
+            H
+          </li>
+          <li class="program">
+            I
+          </li>
+          <li class="program">
+            J
+          </li>
+          <li class="program">
+            K
+          </li>
+        </ul>
+      </div>
     </div>
 
     <hr>
