--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <p class="game-intro">Mess around with Conway's <strong>Game of Life!</strong></p>
 
     <div class="game-container">
+      <div class="shooter-container">
+        <div class="shooter-grid-container">
+        </div>
+        <div class="shooter-tile-container">
+        </div>
+      </div>
       <div class="grid-container">
       </div>
       <div class="program-drawer" ng-controller="ProgramCtrl">
@@ -47,6 +53,8 @@
   <script type="text/javascript" src="./includes/js/animframe_polyfill.js"></script>
   <script type="text/javascript" src="./includes/js/cell.js"></script>
   <script type="text/javascript" src="./includes/js/grid.js"></script>
+  <script type="text/javascript" src="./includes/js/game_grid.js"></script>
+  <script type="text/javascript" src="./includes/js/game_objects.js"></script>
   <script type="text/javascript" src="./includes/js/program_wrapper.js"></script>
   <script type="text/javascript" src="./includes/js/game_manager.js"></script>
   <script type="text/javascript" src="./includes/js/keyboard_input_manager.js"></script>
