I don't like Life anymore

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <title>Pipes</title>
+  <title>ProgramBlaster</title>
 
   <link href="./includes/style.css" rel="stylesheet" type="text/css">
   <script src="./includes/js/angular.min.js"></script>
@@ -11,7 +11,7 @@
     <div class="heading">
       <h1 class="title">Life</h1>
     </div>
-    <p class="game-intro">Mess around with Conway's <strong>Game of Life!</strong></p>
+    <p class="game-intro">Build a program that will let you <strong>Defeat the Space Corrupter!</strong></p>
 
     <div class="game-container">
       <div class="shooter-container">
@@ -24,6 +24,9 @@
       </div>
       <div class="program-drawer" ng-controller="ProgramCtrl">
         <ul>
+          <li class="clear-button">
+            <span>Clear Program</span>
+          </li>
           <li class="run-button">
             <span>Run Program</span>
           </li>
