--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     </div>
     <p class="game-intro">Build a program that will let you <strong>Defeat the Space Corrupter!</strong></p>
 
+    <hr noshade>
+    <p class="instructions">
+      Instructions: <strong>Click and place</strong> programs onto the grid to choose your attributes.<br>
+      Then, click <strong>Run Program</strong> to start fighting!<br>
+      Controls: <strong>Arrow Keys</strong> to move, <strong>Space Bar</strong> to shoot
+    </p>
+
     <div class="game-container">
       <div class="shooter-container">
         <div class="shooter-grid-container">
@@ -45,7 +52,7 @@
       </div>
     </div>
 
-    <hr>
+    <hr noshade>
     <p>
     Created by <a href="http://thomassteinke.net/" target="_blank">Thomas Steinke</a>.
     </p>
