--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <title>ProgramBlaster</title>
+  <title>Corrupter</title>
 
   <link href="./includes/style.css" rel="stylesheet" type="text/css">
   <script src="./includes/js/angular.min.js"></script>
@@ -9,15 +9,14 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">Life</h1>
+      <h1 class="title">Corrupter</h1>
     </div>
-    <p class="game-intro">Build a program that will let you <strong>Defeat the Space Corrupter!</strong></p>
+    <p class="game-intro">Build fighting programs and <strong>Defeat the Space Corrupter!</strong></p>
 
     <hr noshade>
     <p class="instructions">
       Instructions: <strong>Click and place</strong> programs onto the grid to choose your attributes.<br>
       Then, click <strong>Run Program</strong> to start fighting!<br>
-      Controls: <strong>Arrow Keys</strong> to move, <strong>Space Bar</strong> to shoot
     </p>
 
     <div class="game-container">
@@ -51,6 +50,10 @@
         </ul>
       </div>
     </div>
+
+    <p class="in-game-instructions" style="display: none">
+    Controls: <strong>Arrow Keys</strong> to move, <strong>Space Bar</strong> to shoot
+    </p>
 
     <hr noshade>
     <p>
