Time for connnnntenttttttt

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
   <script type="text/javascript" src="./includes/js/animframe_polyfill.js"></script>
   <script type="text/javascript" src="./includes/js/cell.js"></script>
   <script type="text/javascript" src="./includes/js/grid.js"></script>
+  <script type="text/javascript" src="./includes/js/level.js"></script>
   <script type="text/javascript" src="./includes/js/game_grid.js"></script>
   <script type="text/javascript" src="./includes/js/game_objects.js"></script>
   <script type="text/javascript" src="./includes/js/program_wrapper.js"></script>
