--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     </p>
 
     <div class="game-container">
+      <div class="game-message">
+        <p>You win!</p>
+        <a class="see-program-button">See final program</a>
+      </div>
       <div class="shooter-container">
         <div class="shooter-grid-container">
         </div>
