--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <div class="game-container">
       <div class="game-message">
-        <p>You win!</p>
-        <a class="see-program-button">See final program</a>
+        <p class="message"></p>
+        <a class="see-program-button">Go</a>
       </div>
       <div class="shooter-container">
         <div class="shooter-grid-container">
