--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <div class="game-container">
       <div class="game-message">
+        <p class="title"></p>
         <p class="message"></p>
         <a class="see-program-button">Go</a>
       </div>
