Edge cases are as bad as braces

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <hr noshade>
     <p class="instructions">
       Instructions: <strong>Click and place</strong> programs onto the grid to choose your attributes.<br>
+      Each program must have X amount of active cells. Any more or less and it will break!
       Then, click <strong>Run Program</strong> to start fighting!<br>
     </p>
 
