--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <hr noshade>
     <p class="instructions">
-      Instructions: <strong>Click and place</strong> programs onto the grid to choose your attributes.<br>
-      Each program must have X amount of active cells. Any more or less and it will break!
+      Instructions: Click and place <strong>modules</strong> onto the grid to change your program.<br>
+      Each module must have X amount of active cells. Any more or less and it will break!<br>
       Then, click <strong>Run Program</strong> to start fighting!<br>
     </p>
 
