--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <p class="instructions">
       Instructions: Click and place <strong>modules</strong> onto the grid to change your program.<br>
       Each module must have X amount of active cells. Any more or less and it will break!<br>
+      If a module is <strong>red</strong>, it won't work!
       Then, click <strong>Run Program</strong> to start fighting!<br>
     </p>
 
