--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html ng-app><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <title>Corrupter</title>
+  
+  <link rel="shortcut icon" href="favicon.ico">
 
   <link href="./includes/style.css" rel="stylesheet" type="text/css">
   <script src="./includes/js/angular.min.js"></script>
