--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <hr noshade>
     <p>
-    Created by <a href="http://thomassteinke.net/" target="_blank">Thomas Steinke</a>.
+    Created by <a href="http://thomassteinke.com/" target="_blank">Thomas Steinke</a>.
     </p>
   </div>
 
